overlays/staging/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: shuttleday-staging
  labels:
    name: test
