overlays/staging/api-deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shuttleday-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shuttleday-api
  template:
    metadata:
      labels:
        app: shuttleday-api
    spec:
      containers:
      - name: api
        # imagePullSecret not required because it's a public image
        image: ghcr.io/shuttleday/api:2.0.0-rc12
        imagePullPolicy: Always 
        ports:
        - containerPort: 2600
