overlays/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: shuttleday 
  name: shuttleday-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shuttleday-api
  template:
    metadata:
      labels:
        app: shuttleday-api
    spec:
      containers:
      - name: api
        # imagePullSecret not required because it's a public image
        image: ghcr.io/shuttleday/api:1.3.5-2-g0300539 
        imagePullPolicy: Always 
        ports:
        - containerPort: 2600
