overlays/staging/ingress.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shuttleday-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/whitelist-source-range: "34.87.183.214" # IP address of GCP bastion host
    nginx.ingress.kubernetes.io/real-ip-header: "X-Real-IP"
spec:
  tls:
  - hosts:
    - "staging.api.shuttleday.info"
    - "staging.shuttleday.info"
    secretName: staging-shuttleday-tls
  rules:
  - host: "staging.api.shuttleday.info"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: shuttleday-api
            port:
              number: 80
  - host: "staging.shuttleday.info"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: shuttleday-frontend
            port:
              number: 80
