overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shuttleday-ingress
  namespace: shuttleday
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: "52.74.136.40" # IP address of AWS Bastion host
spec:
  tls:
  - hosts:
    - "staging.api.shuttleday.info"
    - "staging.shuttleday.info"
    secretName: staging-shuttleday-tls
  rules:
  - host: "staging.api.shuttleday.info"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: staging-shuttleday-api
            port:
              number: 80
  - host: "staging.shuttleday.info"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: staging-shuttleday-frontend
            port:
              number: 80
